# kanari-move-fix

./: .gitmodules  Cargo.toml
.github/workflows/: run_node_devnet.yml  rust.yml
crates/command/: Cargo.toml
crates/command/src/: lib.rs
crates/command/src/move_cli/: mod.rs
crates/command/src/public_cli/: mod.rs
crates/kari/: Cargo.toml
crates/kari-move/: Cargo.toml
crates/kari-move-analyzer/: Cargo.toml
crates/kari-move-analyzer/editors/code/: bun.lockb  package.json
crates/kari-move-analyzer/editors/code/src/: configuration.ts  context.ts  extension.ts  log.ts  main.ts
crates/kari-move/src/: lib.rs  main.rs
crates/kari-move/src/base/: errmap.rs  new.rs
crates/kari-move/src/experimental/: cli.rs
crates/kari-move/src/sandbox/: cli.rs
crates/kari-move/src/sandbox/utils/: mod.rs
crates/kari-move/tests/: build_testsuite.rs  cli_tests.rs  move_unit_tests_move_vm_and_stackless_vm.rs  sandbox_testsuite.rs
crates/kari/src/: main.rs
framework/: Cargo.toml
mona/mona-storage/: Cargo.toml
mona/mona-storage/src/: file_storage.rs  lib.rs
mona/mona-types/: Cargo.toml
mona/mona-types/src/: addresses.rs
