[package]
name = "kari-move-analyzer"
version = "1.0.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "A language server for Move"
repository = "https://github.com/move-language/move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.95"
codespan-reporting = "0.11.1"
derivative = "2.2.0"
dunce = "1.0.5"
im = "15.1.0"
lsp-server = "0.7.8"
lsp-types = "0.90.1"
petgraph.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
url.workspace = true
clap = { version = "3.1.8", features = ["derive"] }
crossbeam.workspace = true
move-command-line-common.workspace = true
move-compiler.workspace = true
move-ir-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true

[features]
address20 = ["move-compiler/address20"]
address32 = ["move-compiler/address32"]
