[package]
name = "kari-move-analyzer"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
codespan-reporting.workspace = true
derivative.workspace = true
dunce.workspace = true
im.workspace = true
lsp-server = "0.7.8"
lsp-types = "0.90.1"
petgraph.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
url.workspace = true
clap = {  workspace = true }
crossbeam.workspace = true
move-command-line-common.workspace = true
move-compiler.workspace = true
move-ir-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true

[features]
address20 = ["move-compiler/address20"]
address32 = ["move-compiler/address32"]
