[package]
name = "kari-move"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.52"
colored = "2.0.0"
difference = "2.0.0"
once_cell = "1.7.2"
serde = { version = "1.0.124", default-features = false }
serde_yaml = "0.8.17"
clap = { version = "3.1.8", features = ["derive"] }
tempfile = "3.2.0"
walkdir = "2.3.1"
codespan-reporting = "0.11.1"
itertools = "0.10.0"
serde_json = "1.0"
toml_edit =  { version = "0.14.3", features = ["easy"] }
reqwest = { version = "0.11.1", features = ["blocking", "json"] }

bcs.workspace = true

move-bytecode-verifier.workspace = true
move-disassembler.workspace = true
move-docgen.workspace = true
move-command-line-common.workspace = true
move-bytecode-utils.workspace = true
move-coverage.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-compiler.workspace = true
move-stdlib = { workspace = true, features = ["testing"] }
move-table-extension = { workspace = true, optional = true }
move-symbol-pool.workspace = true
move-vm-types.workspace = true
move-vm-runtime = { workspace = true, features = ["debugging"] }
move-vm-test-utils.workspace = true
read-write-set = { workspace = true }
read-write-set-dynamic = { workspace = true }
move-resource-viewer.workspace = true
move-binary-format.workspace = true
move-package.workspace = true
move-prover.workspace = true
move-unit-test.workspace = true
move-errmapgen.workspace = true
move-bytecode-source-map.workspace = true
move-bytecode-viewer.workspace = true

[dev-dependencies]
datatest-stable = "0.1.1"
httpmock = "0.6.6"

[[bin]]
name = "move"
path = "src/main.rs"

[[test]]
name = "sandbox_testsuite"
harness = false

[[test]]
name = "move_unit_tests_move_vm_and_stackless_vm"
harness = false

[[test]]
name = "move_unit_tests_evm"
harness = false
required-features = ["evm-backend"]

[[test]]
name = "build_testsuite"
harness = false

[[test]]
name = "build_testsuite_evm"
harness = false
required-features = ["evm-backend"]

[features]
evm-backend = ["move-unit-test/evm-backend", "move-package/evm-backend"]
address20 = ["move-stdlib/address20"]
address32 = ["move-stdlib/address32"]
table-extension = ["move-table-extension", "move-unit-test/table-extension"]
