[package]
name = "mona-types"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true


[dependencies]
# The `move-core-types` crate contains the core types of the Move language.
# Move dependencies (optional)
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
move-resource-viewer = { workspace = true }
move-binary-format = { workspace = true }
anyhow = { workspace = true }
schemars = "0.8.1"
